--- a/Android/QSmartFashion/app/src/main/res/layout/contact_list_item.xml
+++ b/Android/QSmartFashion/app/src/main/res/layout/contact_list_item.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/contact_layout_parent"
     android:orientation="horizontal" android:layout_width="match_parent"
     android:padding="10dp"
     android:layout_height="match_parent">
     <ImageView
-        android:src="@drawable/remove"
+        android:src="@drawable/profile_anon"
         android:layout_gravity="center"
         android:layout_marginRight="20dp"
-        android:id="@+id/contact_remove"
-        android:layout_width="30dp"
-        android:layout_height="30dp" />
+        android:id="@+id/contact_photo"
+        android:visibility="visible"
+        android:layout_width="40dp"
+        android:layout_height="40dp" />
     <LinearLayout
         android:id="@+id/contact_layout"
         android:layout_gravity="center"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
     <TextView
         android:layout_gravity="center_vertical"
-        android:textSize="15sp"
+        android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="#000000"
+        android:textColor="#11b2b2"
         android:id="@+id/contact_name"
-        android:layout_marginRight="20dp"
-        android:layout_width="0dp"
-        android:layout_weight="0.4"
+        android:layout_marginBottom="5dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     <TextView
         android:layout_gravity="center_vertical"
@@ -32,17 +33,32 @@
         android:textStyle="bold"
         android:textColor="#000000"
         android:id="@+id/contact_phone"
-        android:layout_width="0dp"
-        android:layout_weight="0.6"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
     </LinearLayout>
 
-    <ImageView
+    <View
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        />
+    <LinearLayout
+        android:background="#ff073a"
+        android:id="@+id/contact_delete_layout"
         android:visibility="gone"
-        android:layout_gravity="center"
-        android:src="@drawable/add"
-        android:id="@+id/contact_add"
-        android:layout_width="30dp"
-        android:layout_height="30dp" />
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+        <TextView
+            android:padding="15dp"
+            android:id="@+id/contact_delete"
+            android:textColor="#ffffff"
+            android:text="Delete"
+            android:gravity="center"
+            android:layout_gravity="center"
+            android:textStyle="bold"
+            android:textSize="12sp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </LinearLayout>
 
 </LinearLayout>
